// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - withdraw claim exited assets for single user in multiple checkpoints in multiple transactions 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 75054,
}
`;

exports[`EthVault - withdraw claim exited assets for single user in multiple checkpoints in multiple transactions 2`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 48067,
}
`;

exports[`EthVault - withdraw claim exited assets for single user in multiple checkpoints in single transaction 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 50494,
}
`;

exports[`EthVault - withdraw claim exited assets for single user in single checkpoint 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 48067,
}
`;

exports[`EthVault - withdraw enter exit queue locks shares for the time of exit 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 87124,
}
`;

exports[`EthVault - withdraw get checkpoint index works with many checkpoints 1`] = `29948`;

exports[`EthVault - withdraw redeem redeem transfers assets to receiver 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 58254,
}
`;

exports[`EthVault - withdraw update exit queue adds checkpoint 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 103416,
}
`;

exports[`EthVault - withdraw update exit queue for not all the queued shares 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 103412,
}
`;
